--- a/package.json
+++ b/package.json
@@ -21,12 +21,19 @@
     "@angular/platform-browser": "^18.0.0",
     "@angular/platform-browser-dynamic": "^18.0.0",
     "@angular/router": "^18.0.0",
+    "@awesome-cordova-plugins/core": "^6.8.0",
+    "@awesome-cordova-plugins/native-geocoder": "^6.8.0",
+    "@capacitor/android": "6.1.0",
     "@capacitor/app": "6.0.0",
+    "@capacitor/camera": "^6.0.2",
     "@capacitor/core": "6.1.0",
+    "@capacitor/geolocation": "^6.0.1",
     "@capacitor/haptics": "6.0.0",
     "@capacitor/keyboard": "6.0.1",
+    "@capacitor/preferences": "^6.0.2",
     "@capacitor/status-bar": "6.0.0",
     "@ionic/angular": "^8.0.0",
+    "cordova-plugin-nativegeocoder": "^3.5.1",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
